--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.438.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
