--- a/package.json
+++ b/package.json
@@ -10,24 +10,33 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@faker-js/faker": "^9.0.2",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
+    "faker": "^6.6.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.438.0",
     "next": "^14.2.13",
@@ -35,6 +44,7 @@
     "next-themes": "^0.3.0",
     "query-string": "^9.1.0",
     "react": "^18",
+    "react-day-picker": "^9.1.2",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
