--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-table": "^8.20.5",
+    "@types/nodemailer": "^6.4.16",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -37,11 +38,13 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "faker": "^6.6.6",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.438.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-day-picker": "^9.1.2",
