minor quality of life features

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -34,6 +35,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
@@ -43,6 +45,7 @@
     "lucide-react": "^0.438.0",
     "next": "^14.2.13",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.13.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "query-string": "^9.1.0",
