--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next-cloudinary": "^6.13.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
+    "ph-locations": "^1.1.3",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -73,6 +74,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.2.0",
+    "use-postal-ph": "^1.1.10",
     "uuid": "^10.0.0",
     "uuidv4": "^6.2.13",
     "zod": "^3.23.8",
