--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "depcheck": "^1.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
