--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.4.2",
+    "@auth/prisma-adapter": "^1.0.12",
     "@faker-js/faker": "^9.0.2",
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.0",
@@ -55,7 +55,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.438.0",
     "next": "^14.2.13",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.4",
     "next-cloudinary": "^6.13.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
